# slava

./: CMakeLists.txt  README.md  main.cpp
sourceLibraries/: CMakeLists.txt  prob_func.cpp  prob_func.h
tests/: CMakeLists.txt
